hphp/test/slow/readonly/querym.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'Property c of class Foo is readonly, but isn't enclosed in a readonly expression.' in %s/querym.php:16
%A
